[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Combat/ActionSelector.gd" type="Script" id=1]
[ext_resource path="res://Resources/Combat/SkillMenuBg.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "highlight"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, 0 ), Vector2( -20, 0 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="ActionSelector" type="Node2D"]

script = ExtResource( 1 )
DEBUG = 0

[node name="ActionCenter" type="Node2D" parent="."]

editor/display_folded = true

[node name="Label" type="Label" parent="ActionCenter"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Text"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ActionTop" type="Node2D" parent="."]

editor/display_folded = true

[node name="Label" type="Label" parent="ActionTop"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ActionBot" type="Node2D" parent="."]

editor/display_folded = true

[node name="Label" type="Label" parent="ActionBot"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ActionTopOcult" type="Node2D" parent="."]

editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="ActionTopOcult"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ActionBotOcult" type="Node2D" parent="."]

editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="ActionBotOcult"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Tween" type="Tween" parent="."]

playback_process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="SkillsSubmenu" type="Node2D" parent="."]

editor/display_folded = true
visible = false

[node name="Skill0" type="Node2D" parent="SkillsSubmenu"]

editor/display_folded = true

[node name="Node2D" type="Node2D" parent="SkillsSubmenu/Skill0"]

editor/display_folded = true
position = Vector2( -10, 0 )

[node name="BackGround" type="Sprite" parent="SkillsSubmenu/Skill0/Node2D"]

modulate = Color( 1, 1, 1, 0.784314 )
texture = ExtResource( 2 )
centered = false

[node name="Icon" type="Sprite" parent="SkillsSubmenu/Skill0/Node2D"]

[node name="Name" type="Label" parent="SkillsSubmenu/Skill0/Node2D"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Cost" type="Label" parent="SkillsSubmenu/Skill0/Node2D"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="SkillsSubmenu/Skill0"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/highlight = SubResource( 1 )
anims/idle = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="Skill1" type="Node2D" parent="SkillsSubmenu"]

editor/display_folded = true
position = Vector2( 0, 42 )

[node name="Node2D" type="Node2D" parent="SkillsSubmenu/Skill1"]

editor/display_folded = true
position = Vector2( -10, 0 )

[node name="BackGround" type="Sprite" parent="SkillsSubmenu/Skill1/Node2D"]

modulate = Color( 1, 1, 1, 0.784314 )
texture = ExtResource( 2 )
centered = false

[node name="Icon" type="Sprite" parent="SkillsSubmenu/Skill1/Node2D"]

[node name="Name" type="Label" parent="SkillsSubmenu/Skill1/Node2D"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Cost" type="Label" parent="SkillsSubmenu/Skill1/Node2D"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="SkillsSubmenu/Skill1"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/highlight = SubResource( 1 )
anims/idle = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="Skill2" type="Node2D" parent="SkillsSubmenu"]

editor/display_folded = true
position = Vector2( 0, 84 )

[node name="Node2D" type="Node2D" parent="SkillsSubmenu/Skill2"]

editor/display_folded = true
position = Vector2( -10, 0 )

[node name="BackGround" type="Sprite" parent="SkillsSubmenu/Skill2/Node2D"]

modulate = Color( 1, 1, 1, 0.784314 )
texture = ExtResource( 2 )
centered = false

[node name="Icon" type="Sprite" parent="SkillsSubmenu/Skill2/Node2D"]

[node name="Name" type="Label" parent="SkillsSubmenu/Skill2/Node2D"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Cost" type="Label" parent="SkillsSubmenu/Skill2/Node2D"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="SkillsSubmenu/Skill2"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/highlight = SubResource( 1 )
anims/idle = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"


